--- a/register.html
+++ b/register.html
@@ -20,6 +20,8 @@
           
           </div>
           <div class="col-sm">
+            name : <input type="text" id ="name"><br>
+            email : <input type="text" id ="email"><br>
             username : <input type="text" id ="username"><br>
             password : <input type="text" id="password"><br>
             <button onclick="register()">Register</button>
@@ -40,7 +42,7 @@
   document.cookie = cname + "=" + cvalue + ";" + expires + ";path=/";
 }
 function getCookie(cname) {
-  var name = cname + "=";
+  var name1 = cname + "=";
   var decodedCookie = decodeURIComponent(document.cookie);
   var ca = decodedCookie.split(';');
   for(var i = 0; i <ca.length; i++) {
@@ -48,8 +50,8 @@ function getCookie(cname) {
     while (c.charAt(0) == ' ') {
       c = c.substring(1);
     }
-    if (c.indexOf(name) == 0) {
-      return c.substring(name.length, c.length);
+    if (c.indexOf(name1) == 0) {
+      return c.substring(name1.length, c.length);
     }
   }
   return "";
@@ -59,6 +61,8 @@ function getCookie(cname) {
             url: '/register',
             type: 'POST',
             data: {
+            name: $('#name').val(),
+            email: $('#email').val(),
             username: $('#username').val(),
             password: $('#password').val()
             }
