--- a/register.html
+++ b/register.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Register for web</h1>
+        <h1>Register for website</h1>
         <div class="row">
           <div class="col-sm">
           
